--- a/admin/login_page.html
+++ b/admin/login_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Login Page</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -33,7 +33,7 @@
 
             <div class="row">
 
-                <div class="col mt-3 d-flex justify-content-end">
+                <div class="col d-flex justify-content-end">
                     <button class="btn btn-outline-info">
                         <img src="assets/dark_mode_black_24dp.svg" alt="">
                     </button>
@@ -43,16 +43,16 @@
 
 
             <div class="row d-flex justify-content-center">
-                <img class="col-5 img-fluid" src="assets/hallo-doc-logo.jpg" alt="logo">
+                <img class="col-5 img-fluid input-bg" src="../assets/hallo_doc_logo.png" alt="logo">
             </div>
 
             <div class="row d-flex justify-content-center mt-3">
-                <h3 class="text-center">Reset Your Password</h3>
+                <h3 class="text-center">Login To Your Account</h3>
 
                 <div class="col-lg-6 col-md-8 col-xs-12 mt-3">
 
                     <div class="">
-                        <div class="form-floating d-flex border rounded">
+                        <div class="form-floating d-flex border rounded input-bg">
                             <input type="text" class="form-control no-border bg-transparent" id="floatingInputGroup1"
                                 placeholder="Username" />
                             <img src="assets/user_circle.svg" alt="" class="pe-3">
@@ -61,32 +61,38 @@
 
                     </div>
 
+                    <div class="mt-3">
+                        <div class="form-floating d-flex border rounded input-bg">
+                            <input type="text" class="form-control shadow-none border-0 bg-transparent" id="floatingInputGroup1"
+                                placeholder="Username" />
+                            <img src="assets/password_icon.svg" alt="" class="pe-3">
+                            <label for="floatingInputGroup1">Password</label>
+                        </div>
+                    </div>
+
                     <button class="btn w-100 my-4" style="background-color: #10bce9; color: white;">
-                        Reset Password
+                        Login
                     </button>
 
-                    <a href="login_page.html" class="row">
-                        <div class="col d-flex justify-content-center align-items-center">
-                            <img src="assets/back_arrow.svg" alt="back_arrow" height="30px">
-                            <span class="h6 text-center" style="color: #10bce9;">Back to Login</span>
-                        </div>
+                    <a href="forgot_password.html" class="row d-flex justify-content-center">
+                        <span class="h6 text-center" style="color: #10bce9;">Forgot Password?</span>
                     </a>
-
                 </div>
 
             </div>
 
-            <div class="row justify-content-center">
+            <div class="row align-items-center justify-content-center">
 
                 <footer>
     
-                    <div class="justify-content-center d-flex ">
+                    <div class="justify-content-center d-flex align-items-end">
                         <a href=""><span>Terms of Conditions</span></a>
                         <span class="px-2 " style="color: grey;">|</span>
                         <a href=""><span>Privacy Policy</span></a>
                     </div>
     
                 </footer>
+
             </div>
 
         </div>
