added all four requests pages with responsive design

--- a/html/patient/login_page.html
+++ b/html/patient/login_page.html
@@ -28,8 +28,8 @@
             <div class="row">
 
                 <div class="col d-flex justify-content-end">
-                    <button class="btn btn-outline-info">
-                        <img src="/images/dark_mode_black_24dp.svg" alt="">
+                    <button onclick="myFunction()" class="btn btn-outline-info">
+                        <img src="/images/dark_mode_black_24dp.svg" alt="dark_mode">
                     </button>
                 </div>
 
