--- a/html/patient/submit_request.html
+++ b/html/patient/submit_request.html
@@ -16,7 +16,7 @@
     <header class="shadow">
         <div class="d-flex mx-3 align-items-center justify-content-between">
             <img src="/images/hallo_doc_logo.png" alt="logo_icon" height="100px">
-            <button class="btn btn-outline-info shadow-none">
+            <button onclick="myFunction()" class="btn btn-outline-info shadow-none">
                 <img src="/images/dark_mode_black_24dp.svg" alt="dark_mode">
             </button>
         </div>
@@ -57,7 +57,7 @@
 
         <div class="row mt-4">
             <div class="d-flex justify-content-center">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none" href="create_family_request.html">
                     <div class="family-friend-div justify-content-center d-flex align-items-center">
                         <h4 class="text-uppercase">Family/Friend</h4>
                     </div>
@@ -68,7 +68,7 @@
 
         <div class="row mt-4">
             <div class="d-flex justify-content-center">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none" href="create_concierge_request.html">
                     <div class="concierge-div justify-content-center d-flex align-items-center">
                         <h4 class="text-uppercase">Concierge</h4>
                     </div>
@@ -80,7 +80,7 @@
 
         <div class="row mt-4">
             <div class="d-flex justify-content-center">
-                <a class="text-decoration-none" href="">
+                <a class="text-decoration-none" href="create_business_request.html">
                     <div class="business-partners-div justify-content-center d-flex align-items-center">
                         <h4 class="text-uppercase">Business Partners</h4>
                     </div>
