--- a/html/patient/forgot_password.html
+++ b/html/patient/forgot_password.html
@@ -28,7 +28,7 @@
             <div class="row">
 
                 <div class="col mt-3 d-flex justify-content-end">
-                    <button class="btn btn-outline-info">
+                    <button onclick="myFunction()" class="btn btn-outline-info">
                         <img src="/images/dark_mode_black_24dp.svg" alt="">
                     </button>
                 </div>
