--- a/html/patient/index.html
+++ b/html/patient/index.html
@@ -14,14 +14,15 @@
 
 <body>
 
-    <header >
-        <div class="row d-flex mx-3 align-items-center justify-content-md-between justify-content-center" style="height: 100px;">
+    <header>
+        <div class="row d-flex mx-3 align-items-center justify-content-md-between justify-content-center"
+            style="height: 100px;">
             <div class="col-4"></div>
             <div class="col-4 d-flex justify-content-center">
                 <img class=" d-none d-md-flex" src="/images/hallo_doc_logo.png" alt="logo_icon" height="100px">
             </div>
             <div class="col-4 d-flex justify-content-md-center justify-content-end">
-                <button class=" btn btn-outline-info shadow-none">
+                <button onclick="myFunction()" class=" btn btn-outline-info shadow-none">
                     <img src="/images/dark_mode_black_24dp.svg" alt="dark_mode">
                 </button>
             </div>
@@ -36,22 +37,24 @@
 
             <div class="col-12 col-sm-9 col-md-7 col-lg-5 mt-4">
                 <a class="text-decoration-none" href="submit_request.html">
-                <div class="d-flex submit-request-div align-items-center justify-content-center">
+                    <div class="d-flex submit-request-div align-items-center justify-content-center">
                         <div class="justify-content-center d-flex align-items-center">
                             <h4 class="fw-normal text-white">Submit A Request</h4>
                         </div>
                     </div>
                 </a>
-                </div>
+            </div>
+
             <div class="col-12 col-sm-9 col-md-7 col-lg-5 mt-4">
-                <a class="text-decoration-none" href="">
-                <div class=" registered-patient-div  align-items-center d-flex justify-content-center">
+                <a class="text-decoration-none" href="login_page.html">
+                    <div class=" registered-patient-div  align-items-center d-flex justify-content-center">
                         <div class="justify-content-center d-flex align-items-center">
                             <h4 class="fw-normal text-white">Registered Patients</h4>
                         </div>
                     </div>
                 </a>
             </div>
+
         </div>
 
         <div class="row align-items-center justify-content-center">
